@@ -5,6 +5,9 @@
 #include <fastlog_decode.h>
 
 
+#define MAX_BUFFER_LEN 1024
+
+
 const char printf_format_arg_pattern[] = {
     "^%"
     "([-+ #0]+)?"           // Flags (Position 1)
@@ -14,12 +17,28 @@ const char printf_format_arg_pattern[] = {
     "([diuoxXfFeEgGaAcspn])"// Specifier (Position 6)
 };
 
-
+/**
+ *  解析一个 argument
+ *
+ *  参数
+ *  -----------------------------------
+ *  buffer      将被写入的buffer内存地址
+ *  use_bytes   成功写入的buffer长度
+ *  nr_stars    格式化字符串中包含几个`*`号，如`%*.*s`的`nr_stars=2`
+ *  arg_fmt     格式化字符串，如"s","%d"等(包括`%*.*s`)
+ *  type        格式化字符串的类型
+ *                  这里需要注意的是，`%*.*s`标识三个数据类型，int,int,char*,
+ *                  那么这里的`type`对应`char*`，剩下两个`int`在`nr_stars`中标记
+ *  arg_addr    存储 argument 的内存地址，见`__fastlog_print_buffer`
+ *  
+ */
 // %d + INT + 0x01 ==> 1
-static int printf_arg(int nr_stars, char *arg_fmt, enum format_arg_type type, void *arg_addr)
+static int sprintf_arg(char *buffer, int *use_bytes, int nr_stars, char *arg_fmt, enum format_arg_type type, void *arg_addr)
 {
     int ret = 0;
     char *p_arg = (char *)arg_addr;
+
+    *use_bytes = 0;
     
     switch(type) {
 
@@ -28,7 +47,7 @@ static int printf_arg(int nr_stars, char *arg_fmt, enum format_arg_type type, vo
         switch(nr_stars) {                          \
         case 0: {                                   \
             type _val = *(type*)p_arg;              \
-            printf(arg_fmt, _val);                  \
+            *use_bytes = sprintf(buffer, arg_fmt, _val);         \
             break;                                  \
         }                                           \
         case 1: {                                   \
@@ -36,7 +55,7 @@ static int printf_arg(int nr_stars, char *arg_fmt, enum format_arg_type type, vo
             p_arg += sizeof(int);                   \
             ret += sizeof(int);                     \
             type _val = *(type*)p_arg;              \
-            printf(arg_fmt, _width, _val);          \
+            *use_bytes = sprintf(buffer, arg_fmt, _width, _val); \
             break;                                  \
         }                                           \
         case 2: {                                   \
@@ -46,7 +65,7 @@ static int printf_arg(int nr_stars, char *arg_fmt, enum format_arg_type type, vo
             p_arg += sizeof(int);                   \
             ret += 2*sizeof(int);                   \
             type _val = *(type*)p_arg;              \
-            printf(arg_fmt, _width,_len, _val);     \
+            *use_bytes = sprintf(buffer, arg_fmt, _width,_len, _val);    \
             break;                                  \
         }                                           \
         default: {                                  \
@@ -75,7 +94,7 @@ static int printf_arg(int nr_stars, char *arg_fmt, enum format_arg_type type, vo
         case 0: {                                   \
             _val = (type)p_arg;                     \
             /*printf("STR:%s\n", _val); */          \
-            printf(arg_fmt, _val);                  \
+            *use_bytes = sprintf(buffer, arg_fmt, _val);         \
             break;                                  \
         }                                           \
         case 1: {                                   \
@@ -84,7 +103,7 @@ static int printf_arg(int nr_stars, char *arg_fmt, enum format_arg_type type, vo
             ret += sizeof(int);                     \
             _val = (type)p_arg;                     \
             /*printf("STR:%s\n", _val); */          \
-            printf(arg_fmt, _width, _val);          \
+            *use_bytes = sprintf(buffer, arg_fmt, _width, _val); \
             break;                                  \
         }                                           \
         case 2: {                                   \
@@ -95,7 +114,7 @@ static int printf_arg(int nr_stars, char *arg_fmt, enum format_arg_type type, vo
             ret += 2*sizeof(int);                   \
             _val = (type)p_arg;                     \
             /*printf("STR:%s\n", _val); */          \
-            printf(arg_fmt, _width, _len, _val);    \
+            *use_bytes = sprintf(buffer, arg_fmt, _width, _len, _val);    \
             break;                                  \
         }                                           \
         default: {                                  \
@@ -150,8 +169,10 @@ static int printf_arg(int nr_stars, char *arg_fmt, enum format_arg_type type, vo
 
 
 
-static void regex_format_printf(char* format, struct args_type *argsType, fastlog_logdata_t *log)
+static void sprintf_regex_format(char *buffer, char* format, struct args_type *argsType, fastlog_logdata_t *log)
 {
+    int pos_buffer = 0;
+
     int iarg = 0;
 	int status = 0, i = 0;
 	int flag = REG_EXTENDED;
@@ -160,59 +181,76 @@ static void regex_format_printf(char* format, struct args_type *argsType, fastlo
 	regex_t reg;
     
 	const char *pattern = printf_format_arg_pattern;
-	char *buf = format;
 
     char *args_addr = log->log_args_buff;
 
     regcomp(&reg, pattern, flag);
 
-    int len = strlen(buf);
-    char *fmt = buf;
+    /* 剩下的格式化字符串长度 */
+    int len_fmt_remain = strlen(format);
+    char *fmt = format;
 
     int p_fmt = 0;
     
-    while(len>0) {
-
-        int N_stars;
+    while(len_fmt_remain>0) {
         
+        /**
+         *  N_stars 用于带星号的格式化输出 `%*.*s`
+         *
+         *  `%*.*s` -> N_stars = 2
+         *  `%.*s`  -> N_stars = 1
+         *  `%s`    -> N_stars = 0
+         *
+         *  意在解决如下的格式化输出
+         *
+         *  -------------------------------------------
+         *  printf("%.*s\n", 4, "hello");
+         *  printf("%*s\n", 40, "hell0");
+         *  printf("%*.*s\n", 40, 4, "hell0");
+         *  输出为：
+         *  hell
+         *                                    hell0
+         *                                     hell
+         *
+         *  整形略有不同
+         *  -------------------------------------------
+         *  printf("%.*d\n", 4, 10000);
+         *  printf("%*d\n", 40, 10000);
+         *  printf("%*.*d\n", 40, 4, 10000);
+         *  输出为：
+         *  10000
+         *                                    10000
+         *                                    10000
+         */
+        int N_stars;
+
+        /**
+         *  buf_use_bytes - `printf_arg`写入到 buffer 的字节数
+         *
+         *  将造成`pos_buffer`位置的更新
+         */
+        int buf_use_bytes = 0;
+
+        /**
+         *  保存从 format 中解析出来的 格式化 % 字符串
+         *  
+         *  如：
+         *  format = "Hello, %s, I'm %d years young."
+         *  解析出的 `internal_fmt` 分别为：
+         *  "%s", "%d"
+         */
         char internal_fmt[8] = {0};
+        
         i = 1;
     
     	status = regexec(&reg, fmt, nmatch, pmatch, 0);
         
     	if(status == REG_NOMATCH) {
-            
-            putchar(fmt[0]);
+
+            buffer[pos_buffer++] = fmt[0];
             
     	} else if(status == 0) {
-            /**
-             *  N_stars 用于带星号的格式化输出 `%*.*s`
-             *
-             *  `%*.*s` -> N_stars = 2
-             *  `%.*s`  -> N_stars = 1
-             *  `%s`    -> N_stars = 0
-             *
-             *  意在解决如下的格式化输出
-             *
-             *  -------------------------------------------
-             *  printf("%.*s\n", 4, "hello");
-             *  printf("%*s\n", 40, "hell0");
-             *  printf("%*.*s\n", 40, 4, "hell0");
-             *  输出为：
-             *  hell
-             *                                    hell0
-             *                                     hell
-             *
-             *  整形略有不同
-             *  -------------------------------------------
-             *  printf("%.*d\n", 4, 10000);
-             *  printf("%*d\n", 40, 10000);
-             *  printf("%*.*d\n", 40, 4, 10000);
-             *  输出为：
-             *  10000
-             *                                    10000
-             *                                    10000
-             */
+    	
             N_stars = 0;
 
             /**
@@ -234,15 +272,19 @@ static void regex_format_printf(char* format, struct args_type *argsType, fastlo
     		}
             internal_fmt[i] = '\0';
 
-//            printf("N_stars = %d, iarg = %d(%s)\n", N_stars, iarg, FASTLOG_FAT_TYPE2SIZENAME[argsType->argtype[iarg]].name);
             iarg += N_stars;
+
+            buf_use_bytes = 0;
             
-            args_addr += printf_arg(N_stars, internal_fmt, argsType->argtype[iarg], args_addr);
+            args_addr += sprintf_arg(&buffer[pos_buffer], &buf_use_bytes, N_stars, internal_fmt, argsType->argtype[iarg], args_addr);
 //            printf("%d->%d(%s)\n", iarg, argsType->argtype[iarg], FASTLOG_FAT_TYPE2SIZENAME[argsType->argtype[iarg]].name);
+            pos_buffer += buf_use_bytes;
+            
             iarg ++;
     	}
+        
         fmt += i;
-        len -= i;
+        len_fmt_remain -= i;
         
     }
     
@@ -250,21 +292,17 @@ static void regex_format_printf(char* format, struct args_type *argsType, fastlo
 }
 
 
-int reprintf(struct logdata_decode *logdata)
+int reprintf(struct logdata_decode *logdata, struct output_struct *output)
 {
-    //TODO
-    char* user_string    = logdata->metadata->user_string; 
-    char* src_filename   = logdata->metadata->src_filename; 
-    char* src_function   = logdata->metadata->src_function; 
-    char* print_format   = logdata->metadata->print_format;
-    char* thread_name    = logdata->metadata->thread_name;
-
+    char log_buffer[MAX_BUFFER_LEN] = {0};
+    
 //    printf(">> %s,%s,%s,%s,%s. <<<<<<<<<<<<<\n", user_string, src_filename, src_function, print_format, thread_name);
 
 //    printf(">>>>\n");
 
-    regex_format_printf(print_format, &logdata->metadata->argsType, logdata->logdata);
+    sprintf_regex_format(log_buffer, logdata->metadata->print_format, &logdata->metadata->argsType, logdata->logdata);
     
-//    printf("<<<<\n");
+//    printf("==> %s", log_buffer);
+    output_log_item(output, logdata, log_buffer);
 }
 
